# KsanaLLM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_cn.md  requirements.txt  setup.py
benchmarks/: README.md  benchmark_throughput.py
cmake/: FlashAttention.cmake  (+3 more)
src/ksana_llm/connector/: CMakeLists.txt  config.h  connector.cpp  connector.h  connector_test.cpp  cuda_buffer_pool.h  cuda_buffer_pool_test.cpp  device_info_manager.cpp  node_info.h  task_dispatcher.cpp  task_dispatcher.h  task_dispatcher_nccl_test.cpp  task_key.h  task_manager.cpp  task_manager.h  task_manager_test.cpp
src/ksana_llm/connector/communicator/: communicator.h  communicator_manager.h  communicator_manager_test.cpp
src/ksana_llm/connector/communicator/nvida/: nccl_communicator.cpp  nccl_communicator.h  nccl_communicator_test.cpp
src/ksana_llm/connector/communicator/zmq/: zmq_communicator.cpp  zmq_communicator.h  zmq_communicator_test.cpp
src/ksana_llm/connector/coordinator/: default_coordinator.cpp  default_coordinator_test.cpp
src/ksana_llm/connector/router_client/: CMakeLists.txt  http_router_client.cpp  http_router_client.h  http_router_client_test.cpp  router_client.h
src/ksana_llm/kernels/nvidia/: CMakeLists.txt  attention_kernel_wrapper.cpp  attention_kernel_wrapper.h  basic_kernel_wrapper.cpp  basic_kernel_wrapper.h  deepseek_deepgemm_wrapper.cpp  deepseek_deepgemm_wrapper.h  flash_attn_cpp_wrapper.cpp  flash_attn_cpp_wrapper.h  flash_attn_cpp_wrapper_test.cpp  fused_moe_gptq_awq_test.cpp  fused_moe_gptq_int4_fp8_test.cpp  fused_moe_test.cpp  grouped_topk_test.cpp  kernel_wrapper.cpp  kernel_wrapper.h  kernel_wrapper_test.cpp  mla_kernel_wrapper.cpp  mla_kernel_wrapper.h  moe_kernel_wrapper.cpp  moe_kernel_wrapper.h  per_token_group_quant_fp8_test.cpp  triton_wrapper.cpp  triton_wrapper.h
src/ksana_llm/model_performance/: CMakeLists.txt  communication_performance_runner.cpp  communication_performance_runner.h  communication_performance_runner_test.cpp  model_performance_runner.cpp  model_performance_runner.h  model_performance_runner_test.cpp  model_preformance_runner_test.cpp  perf_profile_config_builder_for_csv.cpp  perf_profile_config_builder_for_csv.h  run_model_performance.cpp  test_config.csv
src/ksana_llm/models/: CMakeLists.txt
src/ksana_llm/models/baichuan/: baichuan_model.cpp  baichuan_model.h  baichuan_weight.cpp  baichuan_weight.h
src/ksana_llm/models/base/: CMakeLists.txt  base_model.h  base_model_config_parser.cpp  base_model_config_parser.h  base_model_weight_loader.cpp  base_model_weight_loader.h  base_weight.cpp  base_weight.h  buffer_manager.cpp  buffer_manager.h  common_model_weight_loader.cpp  common_model_weight_loader.h  fake_weight_for_test.h  fake_weight_test.cpp  forwarding_context.cpp  forwarding_context.h  layer_creation_context.cpp  layer_creation_context.h  model_arch.cpp  model_arch.h  model_communicator.cpp  model_communicator.h  model_input.cpp  model_input.h  model_input_test.cpp  model_output.cpp  model_output.h  model_weight.cpp  model_weight.h  utils.cpp  utils.h  utils_test.cpp
src/ksana_llm/models/bge_reranker_minicpm/: bge_reranker_minicpm_model.cpp  bge_reranker_minicpm_model.h  bge_reranker_minicpm_weight.cpp
src/ksana_llm/models/chatglm/: chatglm_model.cpp  chatglm_model.h  chatglm_weight.cpp  chatglm_weight.h
src/ksana_llm/models/common/: common_config.h  common_model.cpp  common_model.h  common_weight.cpp  common_weight.h  model_interface.h  model_test_helper.h  simple_decoder_layer.cpp  simple_decoder_layer.h  simple_decoder_layer_test.cpp
src/ksana_llm/models/common_mla/: common_mla_weight.cpp  common_mla_weight.h
src/ksana_llm/models/common_moe/: common_moe_weight.cpp  common_moe_weight.h  common_moe_weight_test.cpp  moe_config.h
src/ksana_llm/models/communicator/: tp_communicator.cpp  tp_communicator.h
src/ksana_llm/models/deepseek_v3/: deepseek_v3_config.h  deepseek_v3_dp_test.cpp  deepseek_v3_model.cpp  deepseek_v3_model.h  deepseek_v3_model_test.cpp  deepseek_v3_weight.cpp  deepseek_v3_weight.h  deepseek_v3_weight_test.cpp
src/ksana_llm/models/gpt/: gpt_model.cpp  gpt_model.h  gpt_weight.cpp  gpt_weight.h
src/ksana_llm/models/hunyuan_large/: hunyuan_large_model.cpp  hunyuan_large_model.h  hunyuan_large_test.cpp  hunyuan_large_weight.cpp  hunyuan_large_weight.h
src/ksana_llm/models/hunyuan_turbo/: hunyuan_turbo_test.cpp
src/ksana_llm/models/internlm2/: internlm2_weight.cpp  internlm2_weight.h  internlm_model.cpp  internlm_model.h
src/ksana_llm/models/internlmxcomposer2/: internlmxcomposer2_model.cpp  internlmxcomposer2_model.h
src/ksana_llm/models/llama/: llama_model.cpp  llama_model.h  llama_model_config_parser.cpp  llama_model_config_parser.h  llama_model_weight_loader.cpp  llama_model_weight_loader.h  llama_test.cpp  llama_weight.cpp  llama_weight.h
src/ksana_llm/models/llama4/: llama4_model.cpp  llama4_model.h  llama4_test.cpp  llama4_weight.cpp  llama4_weight.h
src/ksana_llm/models/mixtral/: mixtral_model.cpp  mixtral_model.h  mixtral_weight.cpp  mixtral_weight.h
src/ksana_llm/models/new_deepseek_v3/: new_deepseek_v3_config.cpp  new_deepseek_v3_config.h  new_deepseek_v3_config_parser.cpp  new_deepseek_v3_config_parser.h  new_deepseek_v3_quant_weight.cpp  new_deepseek_v3_quant_weight.h  new_deepseek_v3_weight_impl.cpp  new_deepseek_v3_weight_impl.h  new_deepseek_v3_weight_loader.cpp  new_deepseek_v3_weight_loader.h
src/ksana_llm/models/quant/: cutlass_utils_test.cpp  machete_utils.cpp  marlin_utils.cpp  marlin_utils_test.cpp  quant_fp8_weight_test.cpp  quant_int4_weight_test.cpp  quant_weight.cpp  quant_weight.h
src/ksana_llm/models/qwen/: new_qwen_config_parser.cpp  new_qwen_config_parser.h  new_qwen_config_parser_test.cpp  new_qwen_weight_loader.cpp  new_qwen_weight_loader.h  qwen_model.cpp  qwen_model.h  qwen_test.cpp  qwen_weight.cpp  qwen_weight.h
src/ksana_llm/models/qwen2_moe/: qwen2_moe_model.cpp  qwen2_moe_model.h  qwen2_moe_weight.cpp  qwen2_moe_weight.h
src/ksana_llm/models/qwen3_moe/: qwen3_moe_model.cpp  qwen3_moe_model.h  qwen3_moe_weight.cpp  qwen3_moe_weight.h
(+528 files in other folders)
